--- a/styles/styles.css
+++ b/styles/styles.css
@@ -81,3 +81,8 @@ body {
     max-width: 100%;
     border-radius: 8px;
 }
+
+img:hover {
+    transform: scale(1.05);
+    transition: transform 100ms linear;
+}
