--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,5 @@
 /* ----------------- reset ----------------- */
+@import url('https://fonts.googleapis.com/css2?family=Jura:wght@300..700&display=swap');
 
 * {
     margin: 0;
@@ -53,7 +54,7 @@ em {
     font-size: inherit;
     font-weight: inherit;
     font-style: inherit;
-    text-decoration: none;
+    text-decoration: none;              
     color: inherit;
 }
 
@@ -77,9 +78,15 @@ body {
     text-align: center;
     width: 200px;
 }
+
 .card img {
     max-width: 100%;
     border-radius: 8px;
+}
+
+.nohover img:hover{
+    transform: scale(1.0);
+    transition: transform 0ms linear;
 }
 
 img:hover {
@@ -99,4 +106,19 @@ h2 {
 .imgprods {
     width: 75%;
     height: auto;
+}
+
+.bg-body-sucess{
+    background-color: #f8f8de;
+}
+
+/* ---------------------------------- header --------------------------------- */
+
+.fontstd {
+    font-family: "Jura", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+.colorstd {
+    color: #c6e613;
 }
